--- a/index.html
+++ b/index.html
@@ -16,29 +16,8 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <style>
-    /* Optional custom styles */
-    .filters-list {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-    }
-
-    .filter-item {
-      padding: 8px 16px;
-      cursor: pointer;
-      margin-right: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    .filter-item.active {
-      background-color: #007bff;
-      color: white;
-      border-color: #007bff;
-    }
-  </style>
+  <!-- Main CSS File -->
+  <link href="styles.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: iPortfolio
