--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <button id="scroll-top" class="btn btn-danger btn-floating btn-lg">Click</button>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -485,6 +485,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   
+  <script src="app.js"></script>
 
 </body>
 
