--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="logo">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2NtqN2KmivTC5htHUD-bKBewT3d3IoTq9-Q&s" alt="logo">
     </div>
+    <button class="scrollup">Trang chủ</button>
     <div class="search">
       <input type="text" placeholder="Bạn tìm gì?">
       <button>Tìm kiếm</button>
@@ -179,6 +180,7 @@
         <button data-filter = ".xiaomi" class="btn btn-outline-secondary">Xiaomi</button>
       </div>
       
+      <!-- Card -->
       <div class="filterable_card" id="phone_list">
         <div class="card iphone">
           <img src="https://hoanghamobile.com/Uploads/2023/07/18/13-removebg-preview.png" alt="">
@@ -347,6 +349,9 @@
     <!-- Section: Links  -->
   </footer>
   <!-- Footer -->
+
+  <!-- Scroll to the top of page -->
+  <button class="scrollup scr_btn">click</button>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
