Change some small thing
Logo, contact information, etc.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <header>
     <div class="logo">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2NtqN2KmivTC5htHUD-bKBewT3d3IoTq9-Q&s" alt="logo">
+      <img src="https://cello.vn/image/catalog/logo.png" alt="logo">
     </div>
     <button class="scrollup">Trang chủ</button>
     <div class="search">
@@ -246,22 +246,7 @@
 
       <!-- Right -->
       <div>
-        <a href="#" class="me-4 text-reset">
-          <i class="fa fa-facebook-f"></i>
-        </a>
-        <a href="#" class="me-4 text-reset">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a href="#" class="me-4 text-reset">
-          <i class="fa fa-google"></i>
-        </a>
-        <a href="#" class="me-4 text-reset">
-          <i class="fa fa-instagram"></i>
-        </a>
-        <a href="#" class="me-4 text-reset">
-          <i class="fa fa-linkedin"></i>
-        </a>
-        <a href="#" class="me-4 text-reset">
+        <a href="#" onclick="window.open('https://github.com/IS207-P12-PersonalPlog/IS207-PersonalBlog')" class="me-4 text-reset">
           <i class="fa fa-github"></i>
         </a>
       </div>
@@ -278,7 +263,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              <i class="fas fa-gem me-3"></i>CELLO
             </h6>
             <p>
               Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -333,7 +318,7 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <p><i class="fas fa-home me-3"></i>Thành phố Hồ Chí Minh, Việt Nam</p>
             <p>
               <i class="fas fa-envelope me-3"></i>
               info@example.com
