Modify CSS file

--- a/index.html
+++ b/index.html
@@ -18,97 +18,112 @@
 <body>
 
   <header>
-    <div class="logo">
-      <img src="https://cello.vn/image/catalog/logo.png" alt="logo">
+    <div class="top-nav">
+      <div class="container">
+        <div class="header-top flexbox flex-align-item">
+          <div class="logo">
+            <a href="http://localhost/IS207-PersonalBlog/">
+              <img src="https://cello.vn/image/catalog/logo.png" title="Cello" alt="Cello" class="img-responsive">
+            </a>
+          </div>
+          <div class="header-right">
+            <div class="header-right-inner flexbox">
+              <div class="header-top-left">
+                <button class="scrollup">Trang chủ</button>
+                <div class="search"><input type="text" placeholder="Bạn tìm gì?"><button>Tìm kiếm</button></div>
+              </div>
+              <div class="header-top-right flexbox flex-align-item flex-justify-content-end">
+                <nav>
+                  <ul>
+                      <li><a href="#">Giỏ hàng (0)</a></li>
+                      <li><a href="#">Đăng nhập</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
     </div>
-    <button class="scrollup">Trang chủ</button>
-    <div class="search">
-      <input type="text" placeholder="Bạn tìm gì?">
-      <button>Tìm kiếm</button>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <!-- Đóng mở nav cho thiết bị màn hình nhỏ -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <!-- Dropdown điện thoại -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-mobile-phone"></i> ĐIỆN THOẠI
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">iPhone</a></li>
+                  <li><a class="dropdown-item" href="#">Samsung</a></li>
+                  <li><a class="dropdown-item" href="#">Xiaomi</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+  
+          <!-- Dropdown laptop -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-laptop"></i> LAPTOP
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Asus</a></li>
+                  <li><a class="dropdown-item" href="#">Lenovo</a></li>
+                  <li><a class="dropdown-item" href="#">Mac</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+  
+          <!-- Dropdown tai nghe -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-headphones"></i> TAI NGHE
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Có dây</a></li>
+                  <li><a class="dropdown-item" href="#">Gaming</a></li>
+                  <li><a class="dropdown-item" href="#">Bluetooth</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+  
+          <!-- Dropdown TV -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-television"></i> TV
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">LG</a></li>
+                  <li><a class="dropdown-item" href="#">Samsung</a></li>
+                  <li><a class="dropdown-item" href="#">Xiaomi</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+  
+        </div>
+      </nav>
     </div>
-    <nav>
-      <ul>
-          <li><a href="#">Giỏ hàng (0)</a></li>
-          <li><a href="#">Đăng nhập</a></li>
-      </ul>
-    </nav>
   </header>
 
   <main>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <!-- Đóng mở nav cho thiết bị màn hình nhỏ -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Dropdown điện thoại -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-mobile-phone"></i> ĐIỆN THOẠI
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">iPhone</a></li>
-                <li><a class="dropdown-item" href="#">Samsung</a></li>
-                <li><a class="dropdown-item" href="#">Xiaomi</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Dropdown laptop -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-laptop"></i> LAPTOP
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Asus</a></li>
-                <li><a class="dropdown-item" href="#">Lenovo</a></li>
-                <li><a class="dropdown-item" href="#">Mac</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Dropdown tai nghe -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-headphones"></i> TAI NGHE
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Có dây</a></li>
-                <li><a class="dropdown-item" href="#">Gaming</a></li>
-                <li><a class="dropdown-item" href="#">Bluetooth</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Dropdown TV -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-television"></i> TV
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">LG</a></li>
-                <li><a class="dropdown-item" href="#">Samsung</a></li>
-                <li><a class="dropdown-item" href="#">Xiaomi</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-
-      </div>
-    </nav>
-
     <div class="container slide">
       <div class="row slide">
         <div class="col-lg-8 slide">
