--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="">
   <!-- Main CSS File -->
   <link href="styles.css" rel="stylesheet">
 
@@ -29,14 +29,19 @@
           <div class="header-right">
             <div class="header-right-inner flexbox">
               <div class="header-top-left">
-                <button class="scrollup">Trang chủ</button>
-                <div class="search"><input type="text" placeholder="Bạn tìm gì?"><button>Tìm kiếm</button></div>
+                <div class="search"><input type="text" placeholder="Tìm kiếm"><button>Tìm kiếm</button></div>
               </div>
               <div class="header-top-right flexbox flex-align-item flex-justify-content-end">
                 <nav>
                   <ul>
-                      <li><a href="#">Giỏ hàng (0)</a></li>
-                      <li><a href="#">Đăng nhập</a></li>
+                      <li><a href="#">
+                        <div class="icon"><i class="bi bi-bag-fill"></i>
+                        <div class="txt-name">Giỏ hàng <span class="cart-total-items amount">(0)</span></div>
+                      </a></li>
+                      <li><a href="#">
+                        <div class="icon"></div>
+                        <div class="txt-name">Đăng nhập</div>
+                      </a></li>
                   </ul>
                 </nav>
               </div>
