--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
               <div class="header-top-right flexbox flex-align-item flex-justify-content-end">
                 <nav>
                   <ul>
-                      <li><a href="#">
-                        <div class="icon"><i class="bi bi-bag-fill"></i>
-                        <div class="txt-name">Giỏ hàng <span class="cart-total-items amount">(0)</span></div>
-                      </a></li>
-                      <li><a href="#">
-                        <div class="icon"></div>
-                        <div class="txt-name">Đăng nhập</div>
-                      </a></li>
+                      <li>
+                        <a href="#">
+                          <i class="fa fa-shopping-cart" style="font-size:28px"></i>
+                          <div class="txt-name">Giỏ hàng <span class="cart-total-items amount">(0)</span></div>
+                        </a>
+                      </li>
+                      <li>
+                        <br>
+                        <a href="#">
+                          <div class="txt-name"><i class="fa fa-user" style="inline-size: auto; font-size: 20px;"></i> Đăng nhập</div>
+                        </a>
+                      </li>
                   </ul>
                 </nav>
               </div>
